2010-12-07  Andy Buckley  <andy@insectnation.org>

	* Update the documentation to explain this latest bump to path
	lookup behaviours.

	* Various improvements to existing path lookups. In particular,
	the analysis lib path locations are added to the info and ref
	paths to avoid having to set three variables when you have all
	three file types in the same personal plugin directory.

	* Adding setAnalysisLibPaths and addAnalysisLibPath
	functions. rivet --analysis-path{,-append} now use these and work
	correctly. Hurrah!

	* Add --show-analyses as an alias for --show-analysis, following a
	comment at the ATLAS tutorial.

2010-12-07  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Change LegendXPos behaviour in make-plots. Now the top left
	corner of the legend is used as anchor point.

2010-12-03  Andy Buckley  <andy@insectnation.org>

	* 1.4.0 release.

	* Add bin-skipping to compare-histos to avoid one use of
	rivet-rmgaps (it's still needed for non-plotting post-processing
	like Professor).

2010-12-03  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fix normalisation issues in UA5 and ALEPH analyses

2010-11-27  Andy Buckley  <andy@insectnation.org>

	* MathUtils.hh: Adding fuzzyGtrEquals and fuzzyLessEquals, and
	tidying up the math utils collection a bit.

	* CDF 1994 colour coherence analysis overhauled and
	correction/norm factors fixed. Moved to VALIDATED status.

	* Adding programmable completion for aida2flat and flat2aida.

	* Improvements to programmable completion using the neat _filedir
	completion shell function which I just discovered.

2010-11-26  Andy Buckley  <andy@insectnation.org>

	* Tweak to floating point inRange to use fuzzyEquals for CLOSED
	interval equality comparisons.

	* Some BibTeX generation improvements, and fixing the ATLAS dijet
	BibTeX key.

	* Resolution upgrade in PNG make-plots output.

	* CDF_2005_S6217184.cc, CDF_2008_S7782535.cc: Updates to use the
	new per-jet JetAlg interface (and some other fixes).
