@@ -9,6 +9,7 @@ dist_pkgdata_DATA = \
   ATLAS_2010_S8591806.info \
   ATLAS_2010_S8817804.info \
   ATLAS_2010_CONF_2010_031.info \
+  ATLAS_2010_CONF_2010_046.info \
   ATLAS_2010_CONF_2010_049.info \
   ATLAS_2010_CONF_2010_081.info \
   ATLAS_2010_CONF_2010_083.info \
