@@ -1,0 +1,73 @@
+# BEGIN PLOT /ATLAS_2010_CONF_2010_046/d02-x01-y01
+Title=Charged multiplicity vs. $\eta$, $N_\mathrm{ch}\ge 2$, $\sqrt{s}={}$900\,GeV
+XLabel=$\eta$
+YLabel=$1/N_\mathrm{ev} \mathrm{d}N_\mathrm{ch}/\mathrm{d}\eta$
+LogY=0
+YMin=1.00
+CustomLegend={\large ATLAS preliminary}
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2010_CONF_2010_046/d02-x02-y01
+Title=Charged particle density, $\sqrt{s}={}$900\,GeV
+XLabel=$N_\mathrm{ch}$
+YLabel=$1/N_\mathrm{ev} \mathrm{d}N_\mathrm{ev}/\mathrm{d}N_\mathrm{ch}$
+FullRange=1
+CustomLegend={\large ATLAS preliminary}
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2010_CONF_2010_046/d02-x03-y01
+Title=Charged multiplicity as function of $p_\perp$, $N_\mathrm{ch}\ge 2$, $\sqrt{s}={}$900\,GeV
+XLabel=$p_\perp$ [GeV]
+YLabel=$1/N_\mathrm{ev} \; 1/(2\pi p_\perp) \; \mathrm{d}^2N_\mathrm{ch}/\mathrm{d}\eta\mathrm{d}p_\perp$ [GeV$^{-2}$]
+LogX=1
+FullRange=1
+CustomLegend={\large ATLAS preliminary}
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2010_CONF_2010_046/d02-x04-y01
+Title=Average transverse momentum as function of $N_\mathrm{ch}$, $\sqrt{s}={}$900\,GeV
+XLabel=$N_\mathrm{ch}$
+YLabel=$\langle p_\perp \rangle$ [GeV]
+YMin=0.65
+YMax=1.4
+LogY=0
+CustomLegend={\large ATLAS preliminary}
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2010_CONF_2010_046/d03-x01-y01
+Title=Charged multiplicity vs. $\eta$, $N_\mathrm{ch}\ge 2$, $\sqrt{s}={}$7000\,GeV
+XLabel=$\eta$
+YLabel=$1/N_\mathrm{ev} \mathrm{d}N_\mathrm{ch}/\mathrm{d}\eta$
+LogY=0
+YMin=1.00
+CustomLegend={\large ATLAS preliminary}
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2010_CONF_2010_046/d03-x02-y01
+Title=Charged particle density, $\sqrt{s}={}$7000\,GeV
+XLabel=$N_\mathrm{ch}$
+YLabel=$1/N_\mathrm{ev} \mathrm{d}N_\mathrm{ev}/\mathrm{d}N_\mathrm{ch}$
+FullRange=1
+LegendXPos=0.37
+CustomLegend={\large ATLAS preliminary}
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2010_CONF_2010_046/d03-x03-y01
+Title=Charged multiplicity as function of $p_\perp$, $N_\mathrm{ch}\ge 2$, $\sqrt{s}={}$7000\,GeV
+XLabel=$p_\perp$ [GeV]
+YLabel=$1/N_\mathrm{ev} \; 1/(2\pi p_\perp) \; \mathrm{d}^2N_\mathrm{ch}/\mathrm{d}\eta\mathrm{d}p_\perp$ [GeV$^{-2}$]
+LogX=1
+FullRange=1
+LegendXPos=0.37
+CustomLegend={\large ATLAS preliminary}
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2010_CONF_2010_046/d03-x04-y01
+Title=Average transverse momentum as function of $N_\mathrm{ch}$, $\sqrt{s}={}$7000\,GeV
+XLabel=$N_\mathrm{ch}$
+YLabel=$\langle p_\perp \rangle$ [GeV]
+YMin=0.2
+YMax=0.8
+LogY=0
+CustomLegend={\large ATLAS preliminary}
+# END PLOT
