@@ -9,6 +9,7 @@ dist_pkgdata_DATA = \
   ATLAS_2010_S8591806.plot \
   ATLAS_2010_S8817804.plot \
   ATLAS_2010_CONF_2010_031.plot \
+  ATLAS_2010_CONF_2010_046.plot \
   ATLAS_2010_CONF_2010_049.plot \
   ATLAS_2010_CONF_2010_081.plot \
   ATLAS_2010_CONF_2010_083.plot \
