@@ -1,0 +1,317 @@
+<?xml version="1.0" encoding="ISO-8859-1" ?>
+<!DOCTYPE aida SYSTEM "http://aida.freehep.org/schemas/3.3/aida.dtd">
+<aida version="3.3">
+  <implementation version="1.1" package="FreeHEP"/>
+  <dataPointSet name="d03-x02-y01" dimension="2"
+    path="/REF/ATLAS_2010_CONF_2010_046" title="">
+    <annotation>
+      <item key="Title" value="" sticky="true"/>
+      <item key="AidaPath" value="/REF/ATLAS_2010_CONF_2010_046/d03-x02-y01" sticky="true"/>
+      <item key="FullPath" value="/ATLAS_2010_CONF_2010_046.aida/REF/ATLAS_2010_CONF_2010_046/d03-x02-y01" sticky="true"/>
+    </annotation>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.000000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="7.802000e-03" value="2.141000e-02" errorMinus="7.890000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="3.000000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.543000e-03" value="2.206000e-02" errorMinus="4.529000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="4.000000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="3.580000e-03" value="2.454000e-02" errorMinus="3.486000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="5.000000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="2.999000e-03" value="2.672000e-02" errorMinus="2.900000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="6.000000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="2.552000e-03" value="2.872000e-02" errorMinus="2.567000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="7.000000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="2.396000e-03" value="3.010000e-02" errorMinus="2.338000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="8.000000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="2.194000e-03" value="3.114000e-02" errorMinus="2.050000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="9.000000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.810000e-03" value="3.181000e-02" errorMinus="1.967000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.000000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.667000e-03" value="3.181000e-02" errorMinus="1.584000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.100000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.360000e-03" value="3.127000e-02" errorMinus="1.303000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.200000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="9.140000e-04" value="3.023000e-02" errorMinus="1.012000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.300000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="7.460000e-04" value="2.884000e-02" errorMinus="7.272000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.400000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.666000e-04" value="2.718000e-02" errorMinus="5.722000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.500000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="3.262000e-04" value="2.539000e-02" errorMinus="4.285000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.600000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="3.047000e-04" value="2.372000e-02" errorMinus="3.009000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.700000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.902000e-04" value="2.225000e-02" errorMinus="1.886000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.800000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.784000e-04" value="2.087000e-02" errorMinus="1.769000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.900000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.688000e-04" value="1.975000e-02" errorMinus="1.674000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.000000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.604000e-04" value="1.877000e-02" errorMinus="7.970000e-05"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.100000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.531000e-04" value="1.791000e-02" errorMinus="1.518000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.200000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="7.319000e-05" value="1.716000e-02" errorMinus="1.455000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.300000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.406000e-04" value="1.645000e-02" errorMinus="1.394000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.400000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.359000e-04" value="1.590000e-02" errorMinus="1.347000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.500000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.308000e-04" value="1.530000e-02" errorMinus="1.297000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.600000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.259000e-04" value="1.472000e-02" errorMinus="6.253000e-05"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.700000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.216000e-04" value="1.423000e-02" errorMinus="1.206000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.800000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.176000e-04" value="1.376000e-02" errorMinus="1.166000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.900000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.141000e-04" value="1.335000e-02" errorMinus="1.132000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="3.000000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.103000e-04" value="1.290000e-02" errorMinus="1.094000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="3.100000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="1.596000e-04" value="1.242000e-02" errorMinus="1.053000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="1.500000e+00" value="3.300000e+01" errorMinus="1.500000e+00"/>
+      <measurement errorPlus="1.504000e-04" value="1.170000e-02" errorMinus="1.484000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e+00" value="3.700000e+01" errorMinus="2.500000e+00"/>
+      <measurement errorPlus="1.768000e-04" value="1.030000e-02" errorMinus="1.738000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e+00" value="4.450000e+01" errorMinus="5.000000e+00"/>
+      <measurement errorPlus="2.464000e-04" value="8.149000e-03" errorMinus="2.728000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e+00" value="5.450000e+01" errorMinus="5.000000e+00"/>
+      <measurement errorPlus="3.340000e-04" value="5.872000e-03" errorMinus="3.397000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e+00" value="6.450000e+01" errorMinus="5.000000e+00"/>
+      <measurement errorPlus="3.618000e-04" value="4.072000e-03" errorMinus="3.640000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e+00" value="7.450000e+01" errorMinus="5.000000e+00"/>
+      <measurement errorPlus="3.338000e-04" value="2.741000e-03" errorMinus="3.388000e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="1.000000e+01" value="8.950000e+01" errorMinus="1.000000e+01"/>
+      <measurement errorPlus="2.603000e-04" value="1.442000e-03" errorMinus="2.563000e-04"/>
+    </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d03-x04-y01" dimension="2"
+    path="/REF/ATLAS_2010_CONF_2010_046" title="">
+    <annotation>
+      <item key="Title" value="" sticky="true"/>
+      <item key="AidaPath" value="/REF/ATLAS_2010_CONF_2010_046/d03-x04-y01" sticky="true"/>
+      <item key="FullPath" value="/ATLAS_2010_CONF_2010_046.aida/REF/ATLAS_2010_CONF_2010_046/d03-x04-y01" sticky="true"/>
+    </annotation>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.000000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.434000e-03" value="4.426000e-01" errorMinus="4.434000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="3.000000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.434000e-03" value="4.420000e-01" errorMinus="4.434000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="4.000000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.434000e-03" value="4.415000e-01" errorMinus="4.434000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="5.000000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.434000e-03" value="4.415000e-01" errorMinus="4.434000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="6.000000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.434000e-03" value="4.426000e-01" errorMinus="4.434000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="7.000000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.434000e-03" value="4.437000e-01" errorMinus="4.434000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="8.000000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.434000e-03" value="4.459000e-01" errorMinus="4.434000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="9.000000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.434000e-03" value="4.487000e-01" errorMinus="4.989000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.000000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.434000e-03" value="4.520000e-01" errorMinus="4.989000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.100000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.989000e-03" value="4.553000e-01" errorMinus="4.434000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.200000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.989000e-03" value="4.597000e-01" errorMinus="4.989000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.300000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.989000e-03" value="4.642000e-01" errorMinus="4.989000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.400000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.989000e-03" value="4.692000e-01" errorMinus="5.543000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.500000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="5.543000e-03" value="4.742000e-01" errorMinus="5.543000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.600000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="6.097000e-03" value="4.791000e-01" errorMinus="5.543000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.700000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="5.543000e-03" value="4.847000e-01" errorMinus="6.097000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.800000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="6.097000e-03" value="4.897000e-01" errorMinus="5.543000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="1.900000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="6.097000e-03" value="4.947000e-01" errorMinus="5.543000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.000000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="6.097000e-03" value="4.997000e-01" errorMinus="6.097000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.100000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="6.097000e-03" value="5.046000e-01" errorMinus="6.097000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.200000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="6.097000e-03" value="5.091000e-01" errorMinus="6.097000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.300000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="6.097000e-03" value="5.135000e-01" errorMinus="6.097000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.400000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="6.097000e-03" value="5.174000e-01" errorMinus="6.097000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.500000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="6.652000e-03" value="5.213000e-01" errorMinus="6.097000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.600000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="6.097000e-03" value="5.252000e-01" errorMinus="6.097000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.700000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="6.097000e-03" value="5.290000e-01" errorMinus="6.652000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.800000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="6.097000e-03" value="5.324000e-01" errorMinus="6.097000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="2.900000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="6.097000e-03" value="5.357000e-01" errorMinus="6.097000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="3.000000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="6.097000e-03" value="5.390000e-01" errorMinus="6.097000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="3.100000e+01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="6.097000e-03" value="5.423000e-01" errorMinus="6.652000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="1.500000e+00" value="3.300000e+01" errorMinus="1.500000e+00"/>
+      <measurement errorPlus="6.097000e-03" value="5.484000e-01" errorMinus="6.652000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e+00" value="3.700000e+01" errorMinus="2.500000e+00"/>
+      <measurement errorPlus="6.652000e-03" value="5.595000e-01" errorMinus="6.652000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e+00" value="4.450000e+01" errorMinus="5.000000e+00"/>
+      <measurement errorPlus="6.652000e-03" value="5.789000e-01" errorMinus="7.206000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e+00" value="5.450000e+01" errorMinus="5.000000e+00"/>
+      <measurement errorPlus="6.652000e-03" value="6.017000e-01" errorMinus="7.206000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e+00" value="6.450000e+01" errorMinus="5.000000e+00"/>
+      <measurement errorPlus="7.206000e-03" value="6.211000e-01" errorMinus="7.206000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e+00" value="7.450000e+01" errorMinus="5.000000e+00"/>
+      <measurement errorPlus="7.760000e-03" value="6.382000e-01" errorMinus="7.206000e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="1.000000e+01" value="8.950000e+01" errorMinus="1.000000e+01"/>
+      <measurement errorPlus="3.104000e-02" value="6.576000e-01" errorMinus="3.104000e-02"/>
+    </dataPoint>
+  </dataPointSet>
+</aida>
