@@ -54,6 +54,7 @@ RivetATLASAnalyses_la_SOURCES = \
     ATLAS_2010_S8591806.cc \
     ATLAS_2010_S8817804.cc \
     ATLAS_2010_CONF_2010_031.cc \
+    ATLAS_2010_CONF_2010_046.cc \
     ATLAS_2010_CONF_2010_049.cc \
     ATLAS_2010_CONF_2010_081.cc \
     ATLAS_2010_CONF_2010_083.cc
